Move fix scoring and move plugin to directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-app_qt/__pycache__
-math_trainer_core/__pycache__
-math_trainer_core/plugins/__pycache__
 .venv
-math_trainer_core/core/__pycache__
+__pycache__
